# Aurora

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.claude/: napkin.md
.github/workflows/: ci.yml  keep-alive.yml
src/aurora/: config.py  main.py  models.py
src/aurora/core/: constants.py  logging.py
src/aurora/routers/: ask.py
src/aurora/services/: embeddings.py  ingestion.py  llm.py  retrieval.py
tests/: conftest.py
tests/integration/: test_ask_endpoint.py
tests/unit/: test_embeddings.py  test_ingestion.py  test_llm.py  test_models.py  test_retrieval.py
